# StlGeneratorExample

./: CMakeLists.txt  generator.cpp  generator.h  helpers.h  main.cpp  solid.h  tetr.cpp
include/: generator.h  helpers.h
src/: generator.cpp  main.cpp
